# qplug

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  todo.md
.github/workflows/: release.yml  rust.yml
configuration_example/: qplug.lua
definitions/: qsys_defs.lua
pluginframework/: LICENSE.txt  README.md  init.lua
pluginframework/configuration_example/: qplug.lua
pluginframework/control_components/: controls.lua
pluginframework/properties/: properties.lua  rectify_properties.lua
pluginframework/setup/: colors.lua  info.lua  model.lua
src/: assets.rs  config.rs  files.rs  lib.rs  main.rs  utils.rs
src/assets/definitions/: LICENSE  channelgroups.lua  common.lua  components.lua  controls.lua  crypto.lua  dante_api.lua  design.lua  dir.lua  email.lua  ezsvg.lua  httpclient.lua  json.lua  log.lua  lpeg.lua  lua_bitstring.lua  luadate.lua  luaxml.lua  mixer.lua  namedcontrol.lua  network.lua  notifications.lua  ping.lua  qrcode.lua  qsys_defs.lua  rapidjson.lua  serialports.lua  snapshot.lua  snmp.lua  snmptrap.lua  ssh.lua  system.lua  tcpserver.lua  tcpsocket.lua  timer.lua  uci.lua  udpsocket.lua  websocket.lua
src/assets/pluginframework/control_components/: components.lua  wiring.lua
src/assets/pluginframework/layout/: layout.lua
src/assets/pluginframework/properties/: pins.lua
src/assets/pluginframework/runtime/: runtime.lua
src/assets/pluginframework/setup/: info.lua  pages.lua  pretty_name.lua
src/cli/: mod.rs
src/cli/subcommands/: new.rs
src/lua/: info.rs  parser.rs
src/modules/: config.rs  files.rs  mod.rs
src/modules/cli/: mod.rs
src/modules/cli/subcommands/: build.rs  check.rs  compile.rs  copy.rs  init.rs  mod.rs  (+2 more)
src/modules/lua/: api.rs  info.rs  mod.rs  parser.rs  scratch.py
