[package]
name = "qplug"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.11"
git2 = "0.19.0"
mlua = { version = "0.9.9", features = ["serialize", "lua54"] }
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10.1"
